--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,12 @@
-{% extends "admin/base_site.html" %}
-{% load i18n %}
+{% extends "admin/base.html" %}
+{% load i18n static %}
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
+
+{% block extrahead %}
+{{ block.super }}
+<link rel="stylesheet" type="text/css" href="{% static 'admin/css/custom_admin.css' %}">
+{% endblock %}
 
 {% block branding %}
 <h1 id="site-name">
